<resources>
    <string name="app_name">Pocket Movie</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="txt_cadastrar">Não tem conta ainda? Clique aqui</string>
    <string name="txt_cadastro">Informe os dados para o cadastro</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="catalogo">CATÁLOGO</string>
    <string name="novidades">NOVIDADES</string>
    <string name="favoritos">FAVORITOS</string>
    <string name="config">CONFIGURAÇÕES</string>
    <string name="diretor">DIRETOR</string>
    <string name="ator_atriz">ATOR / ATRIZ</string>
    <string name="msg_logoff">Confirma sair do APP ?</string>
    <string name="assistidos">ASSISTIDOS</string>
    <string name="cadastro_filmes">Cadastro de Filmes e Séries</string>
    <string name="voltar">Voltar</string>
    <string name="upload_imagem">Carregar Imagem</string>
    <string name="ok">OK</string>
    <string name="tamanho_imagem">Tamanho: 100x67 pixels</string>
    <string name="formato_imagem">Formato: JPEG</string>
    <string name="confirma_voltar">Deseja sair desta tela ?</string>
    <string name="busca_filme">Busca pela primeira letra</string>
    <string name="avaliacao_editor">Avaliação do Editor</string>
    <string name="grava_sem_imagem">Confirma a gravação sem imagem?</string>
    <string name="editar_filme">Editar</string>

    <string name="msg_filme_cad_sucesso">Filme/Série cadastrado com sucesso</string>
    <string name="msg_dados_inconsistemtes">Dados inconsistentes</string>
    <string name="msg_sucesso_gravacao">Sucesso na gravação</string>
    <string name="msg_erro_gravacao">Erro na gravação</string>
    <string name="msg_falha_imagem">Falha na carga da imagem</string>
    <string name="msg_preencher_tit_port">Preencher TÍTULO EM PORTUGUÊS</string>

    <string-array name="array_generos">
        <item>Animação</item>
        <item>Aventura</item>
        <item>Comédia</item>
        <item>Drama</item>
        <item>Ficção-Científica</item>
        <item>Policial</item>
        <item>Suspense</item>
        <item>Terror</item>
    </string-array>
    <string name="gen_animacao">Animação</string>
    <string name="gen_aventura">Aventura</string>
    <string name="gen_comedia">Comédia</string>
    <string name="gen_drama">Drama</string>
    <string name="gen_ficcao">Ficção-Científica</string>
    <string name="gen_policial">Policial</string>
    <string name="gen_suspense">Suspense</string>
    <string name="gen_terror">Terror</string>

    <string-array name="array_avaliacao_editor">
        <item>Excepcional</item>
        <item>Ótimo</item>
        <item>Bom</item>
        <item>Regular</item>
        <item>Fraco</item>
    </string-array>
    <string name="aval_excepcional">Excepcional</string>
    <string name="aval_otimo">Ótimo</string>
    <string name="aval_bom">Bom</string>
    <string name="aval_regular">Regular</string>
    <string name="aval_fraco">Fraco</string>

    <string name="filme_tit_portugues">titulo_portugues</string>
    <string name="filme_tit_original">titulo_original</string>
    <string name="filme_direcao">direcao</string>

    <string name="ass_tit_portugues">tituloPortugues</string>
    <string name="ass_assistido">assistido</string>

</resources>